# aksara

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  MANIFEST.in  README.md  aksara.py  build_requirements.txt  doc_requirements.txt  input_example.txt  main.py  output_example.conllu  requirements.txt  setup.cfg  sonar-project.properties
.history/: requirements_20230303102454.txt
.history/tests/: test_lemmatization_20230307180045.py  test_lemmatization_20230307180109.py  test_lemmatization_20230307180114.py  test_lemmatization_20230307181808.py  test_lemmatization_20230307181815.py  test_lemmatization_20230307182635.py  test_lemmatization_20230307182643.py  test_lemmatization_20230307183447.py  test_lemmatization_20230307183458.py  test_lemmatization_20230307183500.py  (+34 more)
aksara/: __init__.py  __main__.py  analyzer.py  conllu.py  core.py  dependency_parser.py  disambiguator.py  formatter.py  lemmatizer.py  morphological_analyzer.py  morphological_feature.py  parser.py  pos_tagger.py  text_normalizer.py  tokenizer.py
dependency_parsing/: README.md  __init__.py
disambiguation/: hmmdecode.py  hmmlearn.py
docs/: Makefile  make.bat  update-lexicon.md
src/: aksara.py  input_example.txt
tests/: test_already_exixt.txt  test_conllu.py  test_dependency.txt  test_dependency_parser.py  test_dependency_parsing_1_kalimat.py  test_dependency_parsing_input_file.py  test_lemmatization.py  test_morphological_analyzer.py  test_pos_tagging.py  test_pos_tagging_output_file.py  testinput.txt  testinput_informal.txt
umabi/: __init__.py  analyzer.py  core.py  formatter.py
(+212 files in other folders)
