[metadata]
name = aksara
version = 0.0.1
python_requires = 3.10

[options]
install_requires = 
    tqdm==4.48.0
    scikit-learn
    numpy==1.23.5
    pandas
    seaborn
    nltk
    torch
    torchvision
    gensim
    gdown
    conllu
    
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude = tests*
