[metadata]
name = aksara
version = file: src/aksara/VERSION
python_requires = 3.10

[options]
install_requires = 
    tqdm>=4.65.0, <5
    scikit-learn>=1.2.2, <2
    numpy>=1.22.4, <2
    pandas>=1.4.4, <2
    seaborn>=0.12.2, <1
    nltk>=3.8.1, <4
    torch>=1.13.1, <2
    gensim>=4.3.1, <5
    gdown>=4.6.4, <5
    
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude = tests*
