[metadata]
name = aksara
version = 1.14-alpha.6
python_requires = 3.10
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = 
    tqdm>=4.65.0, <5
    scikit-learn>=1.2.2, <2
    numpy>=1.22.4, <2
    pandas>=1.4.4, <2
    seaborn>=0.12.2, <1
    nltk>=3.8.1, <4
    torch>=1.13.1, <2.1.0
    gensim>=4.3.1, <5
    gdown>=4.6.4, <5
    igraph>=0.10.4, <1
    plotly>=5.14.1, <5.15
    matplotlib>=3.7.1, <4
    kaleido==0.1.0.post1;platform_system=='Windows'
    kaleido==0.2.1;platform_system!='Windows'
    
packages = find:
include_package_data = True

[options.packages.find]
exclude = tests*
